[workspace]
members = [
    "miel_cli",
    "miel_lib",
    "miel_wasm",
]
resolver = "3"

[workspace.package]
version = "0.0.1"
authors = ["Cédric COLIN (cedric.colin35@gmail.com)"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
radix_trie = "0.2.1"
semver = "1.0.26"
language-tags = "0.3.2"

thiserror = "2.0.12"
any-error = "0.1.0"